# it

./: .gitignore  CMakeLists.txt  README.md
src/: buffer.cpp  buffer.h  cursor.cpp  cursor.h  internal.cpp  internal.h  main.cpp  parser.cpp  parser.h  pch.h  platform.cpp  platform.h  text.cpp  text.h
